Selesai membuat Header & Footer serta Main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,11 @@
 .font-poppins{
   font-family: 'Poppins', sans-serif;
 }
+
+.font-aoboshi{
+  font-family: 'Aoboshi One', serif;
+}
+
+.lh__1{
+  line-height: 36px;
+}
