--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,13 @@
 .lh__1{
   line-height: 36px;
 }
+
+.lh__2{
+  line-height: 30px;
+}
+
+.scrollbar__hidden::-webkit-scrollbar{
+  display: none;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none; 
+}
